--- a/main.ipynb
+++ b/main.ipynb
@@ -70,6 +70,53 @@
     "df.to_csv(\"people.csv\", index=False)\n",
     "print(\"\\nДанные сохранены в файл 'people.csv'\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7411ac59",
+   "metadata": {},
+   "source": [
+    "25.07"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "060d2e13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, breed, age, color):\n",
+    "        self.name = name          # кличка\n",
+    "        self.breed = breed        # порода\n",
+    "        self.age = age            # возраст (в годах)\n",
+    "        self.color = color        # окрас\n",
+    "\n",
+    "class Cat:\n",
+    "    def __init__(self, name, breed, age, color):\n",
+    "        self.name = name          # кличка\n",
+    "        self.breed = breed        # порода\n",
+    "        self.age = age            # возраст (в годах)\n",
+    "        self.color = color        # окрас\n",
+    "\n",
+    "class Car:\n",
+    "    def __init__(self, brand, model, year, color, max_speed, fuel_type):\n",
+    "        self.brand = brand        # марка (например, \"Toyota\")\n",
+    "        self.model = model        # модель (например, \"Camry\")\n",
+    "        self.year = year          # год выпуска\n",
+    "        self.color = color        # цвет\n",
+    "        self.max_speed = max_speed  # максимальная скорость (км/ч)\n",
+    "        self.fuel_type = fuel_type  # тип топлива (\"бензин\", \"дизель\", \"электричество\")/ч.\"\n",
+    "\n",
+    "\n",
+    "class Bicycle:\n",
+    "    def __init__(self, brand, model, wheel_size, gear_count):\n",
+    "        self.brand = brand          # бренд (например, \"Stels\")\n",
+    "        self.model = model          # модель\n",
+    "        self.wheel_size = wheel_size  # размер колес (в дюймах)\n",
+    "        self.gear_count = gear_count  # количество передач\n"
+   ]
   }
  ],
  "metadata": {
