--- a/main.ipynb
+++ b/main.ipynb
@@ -117,6 +117,137 @@
     "        self.wheel_size = wheel_size  # размер колес (в дюймах)\n",
     "        self.gear_count = gear_count  # количество передач\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27329867",
+   "metadata": {},
+   "source": [
+    "29.07"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c10d3f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 1\n",
+    "\n",
+    "class LimitedCounter:\n",
+    "    MAX_VALUE = 10\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.value = 0\n",
+    "    \n",
+    "    def increment(self):\n",
+    "        if self.value < self.MAX_VALUE:\n",
+    "            self.value += 1\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        self.value = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d05fb4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 2\n",
+    "\n",
+    "class PasswordValidator:\n",
+    "    MIN_LENGTH = 6\n",
+    "    \n",
+    "    def __init__(self, password):\n",
+    "        self.password = password\n",
+    "    \n",
+    "    def is_valid(self):\n",
+    "        if len(self.password) < self.MIN_LENGTH:\n",
+    "            return False\n",
+    "        \n",
+    "        has_digit = False\n",
+    "        for char in self.password:\n",
+    "            if char.isdigit():\n",
+    "                has_digit = True\n",
+    "                break\n",
+    "        \n",
+    "        return has_digit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ea81026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 3\n",
+    "\n",
+    "class SequenceGenerator:\n",
+    "    def __init__(self, first_term, ratio):\n",
+    "        self.first_term = first_term\n",
+    "        self.ratio = ratio\n",
+    "    \n",
+    "    def get_term(self, n):\n",
+    "        if n == 1:\n",
+    "            return self.first_term\n",
+    "        return self.ratio * self.get_term(n - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "555f501c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 4\n",
+    "\n",
+    "class ShoppingCart:\n",
+    "    def __init__(self):\n",
+    "        self.items = {}\n",
+    "    \n",
+    "    def add_item(self, item, quantity=1):\n",
+    "        if item in self.items:\n",
+    "            self.items[item] += quantity\n",
+    "        else:\n",
+    "            self.items[item] = quantity\n",
+    "    \n",
+    "    def total_items(self):\n",
+    "        total = 0\n",
+    "        for quantity in self.items.values():\n",
+    "            total += quantity\n",
+    "        return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcbaf86e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 5\n",
+    "\n",
+    "class Book:\n",
+    "    all_books = []\n",
+    "    \n",
+    "    def __init__(self, title, author):\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        Book.all_books.append(self)\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def find_by_author(cls, author):\n",
+    "        books_by_author = []\n",
+    "        for book in cls.all_books:\n",
+    "            if book.author == author:\n",
+    "                books_by_author.append(book)\n",
+    "        return books_by_author"
+   ]
   }
  ],
  "metadata": {
