--- a/main.ipynb
+++ b/main.ipynb
@@ -248,6 +248,187 @@
     "                books_by_author.append(book)\n",
     "        return books_by_author"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44487a3f",
+   "metadata": {},
+   "source": [
+    "03.08"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bc587c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 1\n",
+    "\n",
+    "import threading\n",
+    "\n",
+    "class BankAccount:\n",
+    "    def __init__(self, account_id):\n",
+    "        self.account_id = account_id\n",
+    "        self.balance = 0\n",
+    "        self.lock = threading.Lock()\n",
+    "    \n",
+    "    def deposit(self, amount):\n",
+    "        with self.lock:\n",
+    "            self.balance += amount\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"Account {self.account_id}: Balance = {self.balance}\"\n",
+    "\n",
+    "class Bank:\n",
+    "    def __init__(self, accounts):\n",
+    "        self.accounts = {acc.account_id: acc for acc in accounts}\n",
+    "        self.bank_lock = threading.Lock()\n",
+    "    \n",
+    "    def deposit(self, account_id, amount):\n",
+    "        with self.bank_lock:\n",
+    "            if account_id in self.accounts:\n",
+    "                self.accounts[account_id].deposit(amount)\n",
+    "            else:\n",
+    "                print(f\"Account {account_id} not found!\")\n",
+    "    \n",
+    "    def threaded_deposit(self, deposits):\n",
+    "        threads = []\n",
+    "        for account_id, amount in deposits:\n",
+    "            thread = threading.Thread(target=self.deposit, args=(account_id, amount))\n",
+    "            threads.append(thread)\n",
+    "            thread.start()\n",
+    "        \n",
+    "        for thread in threads:\n",
+    "            thread.join()\n",
+    "    \n",
+    "    def print_balances(self):\n",
+    "        for account in self.accounts.values():\n",
+    "            print(account)\n",
+    "\n",
+    "# Пример использования\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Создаем счета\n",
+    "    accounts = [BankAccount(1), BankAccount(2), BankAccount(3)]\n",
+    "    bank = Bank(accounts)\n",
+    "    \n",
+    "    # Список операций пополнения: (account_id, amount)\n",
+    "    deposits = [\n",
+    "        (1, 100),\n",
+    "        (2, 200),\n",
+    "        (3, 300),\n",
+    "        (1, 50),\n",
+    "        (2, 150),\n",
+    "        (3, 250),\n",
+    "        (1, 10),\n",
+    "        (2, 20),\n",
+    "        (3, 30)\n",
+    "    ]\n",
+    "    \n",
+    "    # Выполняем пополнения в потоках\n",
+    "    bank.threaded_deposit(deposits)\n",
+    "    \n",
+    "    # Выводим итоговые балансы\n",
+    "    print(\"\\nFinal balances:\")\n",
+    "    bank.print_balances()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04ad083f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 2\n",
+    "\n",
+    "import multiprocessing\n",
+    "import time\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        return 0\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return 3.14159 * self.radius ** 2\n",
+    "\n",
+    "class Rectangle(Shape):\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return self.width * self.height\n",
+    "\n",
+    "class Triangle(Shape):\n",
+    "    def __init__(self, base, height):\n",
+    "        self.base = base\n",
+    "        self.height = height\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return 0.5 * self.base * self.height\n",
+    "\n",
+    "class AreaCalculator:\n",
+    "    def __init__(self, shapes):\n",
+    "        self.shapes = shapes\n",
+    "    \n",
+    "    def calculate_sequential(self):\n",
+    "        start_time = time.time()\n",
+    "        areas = [shape.area() for shape in self.shapes]\n",
+    "        elapsed_time = time.time() - start_time\n",
+    "        return areas, elapsed_time\n",
+    "    \n",
+    "    def calculate_parallel(self):\n",
+    "        start_time = time.time()\n",
+    "        with multiprocessing.Pool() as pool:\n",
+    "            areas = pool.map(Shape.area, self.shapes)\n",
+    "        elapsed_time = time.time() - start_time\n",
+    "        return areas, elapsed_time\n",
+    "\n",
+    "# Пример использования\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Создаем список фигур\n",
+    "    shapes = [\n",
+    "        Circle(5),\n",
+    "        Rectangle(4, 6),\n",
+    "        Triangle(3, 7),\n",
+    "        Circle(10),\n",
+    "        Rectangle(8, 5),\n",
+    "        Triangle(5, 10),\n",
+    "        Circle(15),\n",
+    "        Rectangle(10, 12),\n",
+    "        Triangle(8, 15)\n",
+    "    ]\n",
+    "    \n",
+    "    calculator = AreaCalculator(shapes)\n",
+    "    \n",
+    "    # Последовательное вычисление\n",
+    "    seq_areas, seq_time = calculator.calculate_sequential()\n",
+    "    print(f\"Sequential calculation time: {seq_time:.6f} seconds\")\n",
+    "    \n",
+    "    # Параллельное вычисление\n",
+    "    par_areas, par_time = calculator.calculate_parallel()\n",
+    "    print(f\"Parallel calculation time: {par_time:.6f} seconds\")\n",
+    "    \n",
+    "    # Проверка, что результаты совпадают\n",
+    "    assert seq_areas == par_areas, \"Results don't match!\"\n",
+    "    print(\"All area calculations are correct!\")\n",
+    "    \n",
+    "    # Вывод результатов\n",
+    "    print(\"\\nAreas:\")\n",
+    "    for i, (shape, area) in enumerate(zip(shapes, seq_areas)):\n",
+    "        print(f\"{i+1}. {shape.__class__.__name__}: {area:.2f}\")\n",
+    "    \n",
+    "    # Сравнение времени выполнения\n",
+    "    print(f\"\\nParallel was {seq_time/par_time:.2f}x faster than sequential\")"
+   ]
   }
  ],
  "metadata": {
