--- a/main.ipynb
+++ b/main.ipynb
@@ -9,6 +9,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab612176",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e59bd2de",
@@ -78,6 +84,12 @@
    "source": [
     "25.07"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8e0a7b9",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -428,6 +440,203 @@
     "    \n",
     "    # Сравнение времени выполнения\n",
     "    print(f\"\\nParallel was {seq_time/par_time:.2f}x faster than sequential\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99aaea4f",
+   "metadata": {},
+   "source": [
+    "08.08"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c91aa111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 1\n",
+    "\n",
+    "class Animal:\n",
+    "    def __init__(self, name, species):\n",
+    "        self.name = name\n",
+    "        self.species = species\n",
+    "    \n",
+    "    def make_sound(self):\n",
+    "        print(\"Издаёт общий звук животного\")\n",
+    "    \n",
+    "    def move(self):\n",
+    "        print(\"Двигается\")\n",
+    "\n",
+    "class Bird(Animal):\n",
+    "    def __init__(self, name, species, wingspan):\n",
+    "        super().__init__(name, species)\n",
+    "        self.wingspan = wingspan\n",
+    "    \n",
+    "    def move(self):\n",
+    "        print(\"Летит\")\n",
+    "    \n",
+    "    def build_nest(self):\n",
+    "        print(\"Строит гнездо\")\n",
+    "\n",
+    "class Fish(Animal):\n",
+    "    def __init__(self, name, species, max_depth):\n",
+    "        super().__init__(name, species)\n",
+    "        self.max_depth = max_depth\n",
+    "    \n",
+    "    def move(self):\n",
+    "        print(\"Плывёт\")\n",
+    "    \n",
+    "    def swim_upstream(self):\n",
+    "        print(\"Плывёт против течения\")\n",
+    "\n",
+    "# Демонстрация\n",
+    "if __name__ == \"__main__\":\n",
+    "    eagle = Bird(\"Орёл\", \"Aquila chrysaetos\", 200)\n",
+    "    salmon = Fish(\"Лосось\", \"Salmo salar\", 200)\n",
+    "    \n",
+    "    print(\"Орёл:\")\n",
+    "    eagle.make_sound()\n",
+    "    eagle.move()\n",
+    "    eagle.build_nest()\n",
+    "    \n",
+    "    print(\"\\nЛосось:\")\n",
+    "    salmon.make_sound()\n",
+    "    salmon.move()\n",
+    "    salmon.swim_upstream()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85da4dd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 2\n",
+    "\n",
+    "class MediaFile:\n",
+    "    def __init__(self, title, duration, file_size):\n",
+    "        self.title = title\n",
+    "        self.duration = duration\n",
+    "        self.file_size = file_size\n",
+    "    \n",
+    "    def play(self):\n",
+    "        print(\"Воспроизведение медиафайла\")\n",
+    "\n",
+    "class AudioFile(MediaFile):\n",
+    "    def __init__(self, title, duration, file_size, bitrate):\n",
+    "        super().__init__(title, duration, file_size)\n",
+    "        self.bitrate = bitrate\n",
+    "    \n",
+    "    def play(self):\n",
+    "        print(\"Воспроизведение аудио\")\n",
+    "    \n",
+    "    def convert_to_mp3(self):\n",
+    "        print(\"Конвертация в MP3\")\n",
+    "\n",
+    "class VideoFile(MediaFile):\n",
+    "    def __init__(self, title, duration, file_size, resolution):\n",
+    "        super().__init__(title, duration, file_size)\n",
+    "        self.resolution = resolution\n",
+    "    \n",
+    "    def play(self):\n",
+    "        print(\"Воспроизведение видео\")\n",
+    "    \n",
+    "    def add_subtitles(self):\n",
+    "        print(\"Добавлены субтитры\")\n",
+    "\n",
+    "# Демонстрация\n",
+    "if __name__ == \"__main__\":\n",
+    "    podcast = AudioFile(\"Подкаст о Python\", 3600, 50, 256)\n",
+    "    clip = VideoFile(\"Музыкальный клип\", 240, 120, \"1920x1080\")\n",
+    "    \n",
+    "    print(\"Аудиофайл:\")\n",
+    "    podcast.play()\n",
+    "    podcast.convert_to_mp3()\n",
+    "    \n",
+    "    print(\"\\nВидеофайл:\")\n",
+    "    clip.play()\n",
+    "    clip.add_subtitles()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86cce5f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Задание 3\n",
+    "\n",
+    "class BankAccount:\n",
+    "    def __init__(self, account_number):\n",
+    "        self.account_number = account_number\n",
+    "        self.balance = 0.0\n",
+    "    \n",
+    "    def deposit(self, amount):\n",
+    "        if amount > 0:\n",
+    "            self.balance += amount\n",
+    "            print(f\"Пополнение на {amount:.2f}. Новый баланс: {self.balance:.2f}\")\n",
+    "        else:\n",
+    "            print(\"Сумма пополнения должна быть положительной\")\n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if amount <= 0:\n",
+    "            print(\"Сумма снятия должна быть положительной\")\n",
+    "        elif amount > self.balance:\n",
+    "            print(\"Недостаточно средств на счете\")\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            print(f\"Снятие {amount:.2f}. Новый баланс: {self.balance:.2f}\")\n",
+    "    \n",
+    "    def get_balance(self):\n",
+    "        return self.balance\n",
+    "\n",
+    "class SavingsAccount(BankAccount):\n",
+    "    def __init__(self, account_number, interest_rate):\n",
+    "        super().__init__(account_number)\n",
+    "        self.interest_rate = interest_rate\n",
+    "    \n",
+    "    def add_interest(self):\n",
+    "        interest = self.balance * self.interest_rate / 100\n",
+    "        self.balance += interest\n",
+    "        print(f\"Начислены проценты: {interest:.2f}. Новый баланс: {self.balance:.2f}\")\n",
+    "\n",
+    "class CreditAccount(BankAccount):\n",
+    "    def __init__(self, account_number, credit_limit):\n",
+    "        super().__init__(account_number)\n",
+    "        self.credit_limit = credit_limit\n",
+    "    \n",
+    "    def withdraw(self, amount):\n",
+    "        if amount <= 0:\n",
+    "            print(\"Сумма снятия должна быть положительной\")\n",
+    "        elif amount > (self.balance + self.credit_limit):\n",
+    "            print(\"Превышен кредитный лимит\")\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            print(f\"Снятие {amount:.2f}. Новый баланс: {self.balance:.2f}\")\n",
+    "\n",
+    "# Демонстрация\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Сберегательный счет\n",
+    "    savings = SavingsAccount(\"SAV123\", 5.0)\n",
+    "    savings.deposit(1000)\n",
+    "    savings.add_interest()\n",
+    "    savings.withdraw(200)\n",
+    "    savings.add_interest()\n",
+    "    \n",
+    "    print(\"\\n\")\n",
+    "    \n",
+    "    # Кредитный счет\n",
+    "    credit = CreditAccount(\"CRD456\", 1000)\n",
+    "    credit.deposit(500)\n",
+    "    credit.withdraw(200)\n",
+    "    credit.withdraw(400)  # В пределах баланса\n",
+    "    credit.withdraw(500)  # Использует кредитный лимит\n",
+    "    credit.withdraw(500)  # Превышает кредитный лимит"
    ]
   }
  ],
